--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Sakuri</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -19,12 +19,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="monthlyexpenses">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Monthly Expenses
+                <span class="oi oi-moon" aria-hidden="true"></span> Monthly Expenses
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="yearlyexpenses">
-                <span class="oi oi-plus" aria-hidden="true"></span> Yearly Expenses
+                <span class="oi oi-calendar" aria-hidden="true"></span> Yearly Expenses
             </NavLink>
         </li>
     </ul>
