--- a/Shared/NavMenu.razor.css
+++ b/Shared/NavMenu.razor.css
@@ -1,72 +1,62 @@
-.page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-}
-
-.main {
-    flex: 1;
-    background-color: #faf4ed;
-}
-
-.sidebar {
-    background-color: #faf4ed;
-    border-right: 2px solid #f2e9de;
+.navbar-toggler {
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .top-row {
-    background-color: #faf4ed;
-    border-bottom: 2px solid #f2e9de;
-    justify-content: flex-end;
     height: 3.5rem;
-    display: flex;
-    align-items: center;
+    background-color: #e4dfde;
 }
 
-    .top-row ::deep a, .top-row .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
+.navbar-brand {
+    font-size: 1.2rem;
+    color:#d7827e;
+}
+
+.oi {
+    width: 2rem;
+    font-size: 1.1rem;
+    vertical-align: text-top;
+    top: -2px;
+}
+
+.nav-item {
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
+}
+
+    .nav-item:first-of-type {
+        padding-top: 1rem;
+    }
+    .nav-item:last-of-type {
+        padding-bottom: 1rem;
     }
 
-    .top-row a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
+    .nav-item ::deep a {
+        color: #6e6a86;
+        border-radius: 4px;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        line-height: 3rem;
     }
 
-@media (max-width: 640.98px) {
-    .top-row:not(.auth) {
-        display: none;
-    }
+.nav-item ::deep a.active {
+    background-color: #e4dfde;
+    color: #6e6a86;
+}
 
-    .top-row.auth {
-        justify-content: space-between;
-    }
-
-    .top-row a, .top-row .btn-link {
-        margin-left: 0;
-    }
+.nav-item ::deep a:hover {
+    background-color: #eee9e6;
+    color: #6e6a86;
 }
 
 @media (min-width: 641px) {
-    .page {
-        flex-direction: row;
+    .navbar-toggler {
+        display: none;
     }
 
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .main > div {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
+    .collapse {
+        /* Never collapse the sidebar for wide screens */
+        display: block;
     }
 }
