--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using Sakuri
 @using Sakuri.Shared
+@using Sakuri.Data
+@using Sakuri.Models
+@using Sakuri.Helpers
+@using Sakuri.Services
