--- a/_Imports.razor
+++ b/_Imports.razor
@@ -12,3 +12,6 @@
 @using Sakuri.Models
 @using Sakuri.Helpers
 @using Sakuri.Services
+@using Blazored  
+@using Blazored.Modal
+@using Blazored.Modal.Services
