--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -13,6 +13,8 @@
     <title>Sakuri</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
+    <script src="_content/Blazored.Modal/blazored.modal.js"></script>
     <link href="css/site.css" rel="stylesheet" />
     <link href="Sakuri.styles.css" rel="stylesheet" />
 </head>
