--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,62 +1,45 @@
 @page
-@using Sakuri.Areas.Identity.Data
-@using Sakuri.Areas.Identity.Pages
-@using System.Security.Cryptography
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
-@model RegisterModel
+@model LoginModel
 
 @{
-    ViewData["Title"] = "Register";
-    long AccountID = GenerateAccountNumber();
-    long GenerateAccountNumber()
-    {
-        var bytes = new byte[sizeof(Int64)];
-        RNGCryptoServiceProvider Gen = new RNGCryptoServiceProvider();
-        Gen.GetBytes(bytes);
-
-        long random = BitConverter.ToInt64(bytes, 0);
-
-        //Remove any possible negative generator numbers and shorten the generated number to 12-digits
-        string pos = random.ToString().Replace('-', ' ').Substring(0, 12);
-        return AccountID = Convert.ToInt64(pos);
-    }    
+    ViewData["Title"] = "Log in";
 }
 
+<h1>@ViewData["Title"]</h1>
 <div class="card">
     <h4 class="card-header">Register</h4>
     <div class="card-body">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <div class="form-group">
-                <label asp-for="Input.AccountID"></label>
-                <p><b>@AccountID</b>
-                <input asp-for="Input.AccountID" type="hidden" id="Input.AccountID" value=@AccountID />
-                <span asp-validation-for="Input.AccountID" class="text-danger"></span>
-                <button class="btn btn-primary" style="float:right;" onclick="@GenerateAccountNumber();">
-                    Refresh
-                </button>
-                </p>
+        <section>
+            <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                <h2>Use a local account to log in.</h2>
+                <hr />
                 
-            </div>
-        
-        
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            
-            <button id="registerSubmit" type="submit" class="w-90 btn btn-lg btn-primary">Register</button>
-        </form>
-
+                <div class="form-floating">
+                    <input asp-for="Input.AccountID" class="form-control" />
+                    <label asp-for="Input.AccountID" class="form-label"></label>
+                    <span asp-validation-for="Input.AccountID" class="text-danger"></span>
+                </div>
+                <div class="form-floating">
+                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
+                    <label asp-for="Input.Password" class="form-label"></label>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <div>
+                    <input type="submit" id="login-submit" type="submit" value="Login" class="w-100 btn btn-lg btn-primary" />
+                </div>
+                <div>
+                    <p>
+                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                    </p>
+                    <p>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                    </p>
+                </div>
+            </form>
+        </section>
+    </div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-
 
 
