--- a/Areas/Identity/Pages/Account/LogOut.cshtml
+++ b/Areas/Identity/Pages/Account/LogOut.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+@page
 @using Microsoft.AspNetCore.Identity
 @using Sakuri.Areas.Identity.Data
 @attribute [IgnoreAntiforgeryToken]
@@ -14,3 +14,5 @@
         return Redirect("~/");
     }
 }
+
+
