--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,29 +1,29 @@
-<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Sakuri</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="monthlyexpenses">
-                <span class="oi oi-moon" aria-hidden="true"></span> Monthly Expenses
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="yearlyexpenses">
-                <span class="oi oi-calendar" aria-hidden="true"></span> Yearly Expenses
-            </NavLink>
-        </li>
-    </ul>
-</div>
-
+<AuthorizeView>
+    <Authorized>
+        <div class="top-row pl-4 navbar navbar-dark">
+            <a class="navbar-brand" href="">Sakuri</a>
+        </div>
+        <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+            <ul class="nav flex-column">
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
+                        <span class="oi oi-home" aria-hidden="true"></span> Home
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="monthlyexpenses">
+                        <span class="oi oi-moon" aria-hidden="true"></span> Monthly Expenses
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="yearlyexpenses">
+                        <span class="oi oi-calendar" aria-hidden="true"></span> Yearly Expenses
+                    </NavLink>
+                </li>
+            </ul>
+        </div>
+    </Authorized>
+</AuthorizeView>
 @code {
     private bool collapseNavMenu = true;
 
@@ -34,5 +34,3 @@
         collapseNavMenu = !collapseNavMenu;
     }
 }
-
-
