--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,4 @@
-@page "/homemenu"
+@page "/home"
 
 @using Microsoft.AspNetCore.Components.Authorization  
 @inject AuthenticationStateProvider AuthenticationStateProvider  
