--- a/Pages/MonthlyExpenses.razor
+++ b/Pages/MonthlyExpenses.razor
@@ -1,12 +1,11 @@
 @page "/monthlyexpenses"
-@using Sakuri.Data
+@using Sakuri.UI
 @using Sakuri.Areas.Identity.Data
 @using Sakuri.Services
 @using Sakuri.Models
 @using ChartJs.Blazor.PieChart
 @using ChartJs.Blazor.Util
 @using ChartJs.Blazor.Common
-@using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @inject IModalService modal 
 @inject ApplicationDbContext Context
@@ -20,6 +19,7 @@
 <div class="top-row pl-0 navbar navbar-dark">
     <h1>Monthly Expenses</h1>
     <button @onclick="@ShowModal" class="btn-primary btn button-add" style="margin-bottom:10px">Add product</button>
+    
 </div>
 
 <p><b>Expenses for this month:</b></p>
@@ -47,8 +47,9 @@ else
         <tbody>
             @foreach (var item in itemList)
             {
-                if (!IsVisible(item.ItemName.ToString(), item.ItemCategory.ToString()))
+                if (item.Time.Month == Month.Month && !IsVisible(item.ItemName.ToString(), item.ItemCategory.ToString(), item.Time))
                 continue;
+                
                 <tr>
                     <td>@item.ItemName</td>
                     <td>@item.ItemCategory</td>
@@ -65,28 +66,26 @@ else
 }
 
 @code {
+    private bool showTable;
+    private DateOnly Month = DateOnly.FromDateTime(DateTime.Today);
     private PieConfig _config;
-    [Key]
-    public String test;
-    private Chart _chart;
     private AuthenticationState authstate;
     [CascadingParameter] public IModalService Modal { get; set; }
     int totalCost;
     public string Filter { get; set; }
-    List<int> prices = new List<int>();
     List<Items> itemList;
-    public bool IsVisible(string items, string category)
+    private bool IsVisible(string items, string category, DateOnly month)
     {
         if (string.IsNullOrEmpty(Filter))
             return true;
     
-        if (items.ToString().Contains(Filter, StringComparison.OrdinalIgnoreCase) || category.ToString().Contains(Filter, StringComparison.OrdinalIgnoreCase))
+        if (items.ToString().Contains(Filter, StringComparison.OrdinalIgnoreCase) || category.ToString().Contains(Filter, StringComparison.OrdinalIgnoreCase) || month.ToString().Contains(Filter))
             return true;
     
     
         return false;
     }
-    public void ShowModal()
+    private void ShowModal()
     {
         var options = new ModalOptions()
         {
@@ -96,12 +95,25 @@ else
 
         Modal?.Show<AddProduct>("Products", options);
     }
+    private void TriggerTable()
+    {
+        if (showTable == false)
+        {
+            showTable = true;
+            StateHasChanged();
+        }
+        else
+        {
+            showTable = false;
+            StateHasChanged();
+        }
+    }
     protected override async Task OnInitializedAsync()
     {
         totalCost = 0;
         authstate = await AuthStateProvider.GetAuthenticationStateAsync();
         var user = authstate.User;
-        itemList = Service.GetAllItems(user.Identity.Name);
+        itemList = Service.GetMonthlyItems(user.Identity.Name);
         var items = itemList.GroupBy(item => item.ItemCategory).Select(group => (group.Key, group.Sum(item => item.ItemPrice)));
         List<int> prices = new List<int>();
         foreach (var price in items)
@@ -121,21 +133,17 @@ else
                     Display = true,
                     Text = "Monthly Expenses"
                 }
+                
             }
         };
         foreach (var item in items)
         {
             _config.Data.Labels.Add(item.Item1.ToString());
         }
-
+        int count = _config.Data.Labels.Count;
         PieDataset<int> dataset = new PieDataset<int>(prices)
         {
-            BackgroundColor = new[]
-            {
-                ColorUtil.ColorHexString(255, 99, 132), // Slice 1 aka "Red"
-                ColorUtil.ColorHexString(255, 205, 86), // Slice 2 aka "Yellow"
-                ColorUtil.ColorHexString(75, 192, 192), // Slice 3 aka "Green"
-            }
+            BackgroundColor = RandomColorGenerator.ChartColors.All.Take(count).Select(ColorUtil.FromDrawingColor).ToArray()
         };
 
         _config.Data.Datasets.Add(dataset);
