--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
                         <span class="oi oi-calendar" aria-hidden="true"></span> Yearly Expenses
                     </NavLink>
                 </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="allexpenses">
+                        <span class="oi oi-infinity" aria-hidden="true"></span> All Expenses
+                    </NavLink>
+                </li>
             </ul>
         </div>
     </Authorized>
