--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,20 +1,17 @@
 @using System.Net.Http
-@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Http
 @using Microsoft.JSInterop
 @using Sakuri
 @using Sakuri.Shared
-@using Sakuri.Data
-@using Sakuri.Models
-@using Sakuri.Helpers
-@using Sakuri.Services
 @using Blazored  
+@using Blazored.Toast
+@using Blazored.Toast.Services
 @using Blazored.Modal
 @using Blazored.Modal.Services
-@using Microsoft.AspNetCore.Authorization
-@attribute [Authorize]
+@using ChartJs.Blazor
